@@ -4,6 +4,7 @@
 
 - fixed `$.status()` calling
 - added support for schemas in the `QueryBuilder.autoquery(..., '@schema_name')` method
+- extended `NEWACTION` cache with additional `input` key
 
 ========================
 0.0.11
